# ChangeLog for app-text/evince
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/evince/ChangeLog,v 1.230 2011/11/03 05:31:59 tetromino Exp $

*evince-3.2.1 (03 Nov 2011)

  03 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  -files/evince-2.91.5-fix-evinceview-introspection.patch,
  -evince-3.0.2.ebuild, +evince-3.2.1.ebuild, metadata.xml:
  Bump to 3.2.1 from the gnome overlay. Drop old. Add several missing
  dependencies. Notable changes: UI fixes, stability improvements, XPS support.

  17 Oct 2011; Justin Lecher <jlec@gentoo.org> +files/evince-2.32.0-gold.patch,
  metadata.xml, evince-2.32.0-r3.ebuild:
  Fix linking with gold.ld

  05 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> evince-2.32.0-r3.ebuild:
  ppc/ppc64 stable wrt #369909

*evince-3.0.2 (16 Aug 2011)

  16 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +files/evince-2.91.5-fix-evinceview-introspection.patch,
  +evince-3.0.2.ebuild:
  Bump to 3.0.2, from gnome overlay for GNOME 3

  13 Aug 2011; Raúl Porcel <armin76@gentoo.org> evince-2.32.0-r3.ebuild:
  alpha/ia64/sparc stable wrt #369909

  17 Jul 2011; Markus Meier <maekke@gentoo.org> evince-2.32.0-r3.ebuild:
  arm stable, bug #369909

  14 Jul 2011; Thomas Kahle <tomka@gentoo.org> evince-2.32.0-r3.ebuild:
  x86 stable per bug 369909

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> evince-2.32.0-r3.ebuild:
  Stable on amd64 wrt bug #278255

  12 Jun 2011; Pacho Ramos <pacho@gentoo.org> -evince-2.32.0-r1.ebuild,
  evince-2.32.0-r3.ebuild:
  Fix gconf-2.m4 missing again (bug #371272 by Francesco Turco). Remove old.

  26 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> evince-2.32.0-r2.ebuild:
  ppc64 stable wrt #363447

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> evince-2.32.0-r2.ebuild:
  alpha/arm/ia64/sparc stable wrt #363447

*evince-2.32.0-r3 (21 Apr 2011)

  21 Apr 2011; Pacho Ramos <pacho@gentoo.org> +evince-2.32.0-r3.ebuild,